--- a/index.html
+++ b/index.html
@@ -3,102 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <meta name="Description" content="This is a simple responsive table. DCTP-Frontend Track first personal assignment" />
+    <link rel="stylesheet" href="style.css" />
     <title>Philipson Employee Data</title>
-
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        overflow: hidden;
-        background-color: #eee;
-        line-height: 1.1em;
-      }
-      #table-container {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        max-width: 1200px;
-        height: 100vh;
-        padding: 3em;
-        /*border: 2px solid red;*/
-        justify-content: center;
-        align-items: center;
-        background-color: #ffe8;
-      }
-      .heading {
-        font-size: 180%;
-        font-weight: 700;
-        color: #000;
-        margin: 0;
-        padding: 1em;
-        text-shadow: 2px 1px 2px gray;
-      }
-      table {
-        background-color: skyblue;
-        width: 100%;
-        box-shadow: 3px 2px 10px gray;
-        margin: 0.2em 0 0 0;
-      }
-      .heading,
-      th {
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-        text-align: center;
-      }
-
-      th {
-        font-size: 125%;
-        padding: 0.22em;
-        background-color: orange;
-      }
-      .row {
-        font-size: 110%;
-        text-align: justify;
-      }
-      table,
-      tr,
-      .data,
-      .field {
-        border: 1px solid #000;
-        border-collapse: collapse;
-      }
-      td {
-        margin: 0;
-        padding: 0.3em;
-      }
-
-      /*---Media Queries---*/
-      @media (min-width: 300px) and (max-width: 768px) {
-        #table-container {
-          padding: 1em;
-          height: 100vh;
-          /*overflow: hidden;*/
-        }
-        .heading {
-          font-size: 110%;
-          font-weight: bolder;
-          padding: 0 3em;
-        }
-        table {
-          /*overflow: hidden;*/
-          margin: 1em 0 0 0;
-        }
-        th {
-          font-size: 55%;
-          font-weight: bold;
-          padding: 0.2em;
-        }
-        .row {
-          font-size: 50%;
-          padding: 0.1em;
-        }
-      }
-    </style>
   </head>
   <body>
     <main>
